--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 database.driver=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/spp_hotels_db
+database.url=jdbc:mysql://localhost:3306/spp_hotels_db3
 database.user=root
 database.password=admin
 
